# psrchive

./: .gitignore  .gitmodules  ChangeLog  Doxyfile  Makefile.am  bootstrap  configure.ac  configure.in  greps  machines.tested  psrchive_cflags.in  psrchive_ldflags.in  update  upload.csh
Base/: Makefile.am
Base/Applications/: Makefile.am  TextFinder.C  TextFinder.h  VAPTI.C  VAPTI.h  psrconv.C  psredit.C  psrsplit.C  psrtxt.C  remap.C  remap.h  test_threads.C  vap.C  vip.C
Base/Checks/: CalSource.C  Check_registry.C  DeFaradayed.C  Makefile.am  SetReceiver.C  fluxcal.off  fluxcal.on
Base/Classes/: Agent.C  Agent_plugin.C  Application.C  Archive.C  ArchiveInterface.C  ArchiveMatch.C  ArchiveTI.C  Archive_copy.C  Archive_correct.C  Archive_extract.C  Archive_init_Integration.C  Archive_load.C  Archive_match.C  Archive_remove_chan.C  Archive_resize.C  Archive_unload.C  Archive_update_centre_frequency.C  Archive_verbose.C  Archive_verify.C  BasicArchive.C  BasicIntegration.C  Calibrator.C  CalibratorType.C  Config.C  Editor.C  ExampleArchive.C  FITSAlias.C  FourthMoments.C  Home.C  Integration.C  IntegrationManager.C  IntegrationMeta.C  IntegrationTI.C  Integration_combine.C  Integration_insert.C  Integration_mixable.C  Integration_remove.C  Integration_resize.C  Makefile.am  ManagedStrategies.C  (+11 more)
Base/Extensions/: ArchiveExtensionFrequencyAppend.C  Arecibo.C  AuxColdPlasma.C  AuxColdPlasmaHistory.C  Backend.C  BackendName.C  BackendTI.C  BinLngAscOrder.C  BinLngPeriOrder.C  BinaryPhaseOrder.C  CalInfoExtension.C  CalibrationInterpolatorExtension.C  CalibratorExtension.C  CalibratorExtension_build.C  CalibratorStokes.C  CoherentDedispersion.C  CovarianceMatrix.C  CrossCovarianceMatrix.C  DeFaraday.C  Dedisperse.C  DigitiserCounts.C  DigitiserCountsTI.C  DigitiserStatistics.C  DigitiserStatisticsTI.C  ExampleExtension.C  Extension_factory.C  FITSHdrExtension.C  FITSHdrExtensionTI.C  FITSSUBHdrExtension.C  FITSSUBHdrExtensionTI.C  FeedExtension.C  FeedExtensionTI.C  FluxCalibratorExtension.C  FluxCalibratorExtensionTI.C  FluxCalibratorExtension_build.C  GBT.C  ITRFExtension.C  ITRFExtensionTI.C  IntegrationOrder.C  Makefile.am  (+27 more)
Base/Formats/: Agent_static.C  Generator_default.C  Makefile.am  Parameters_children.C  Predictor_children.C  Predictor_factory.C  test_Parameters_factory.C
Base/Resources/: Makefile.am  Tempo_config.C  getHorizon.C  test_Predictor_factory.C
Management/: Config_ensure_linkage.C  Makefile.am  cvs_backup.csh  developer  install_with_githash.sh  psrchive.cfg  psrchive.in  psrchive.m4  psrchive_aclocal.in  psrchive_cflags.in  psrchive_config.C  psrchive_install  psrchive_layout.shtml  psrchive_ldflags.in  psrchive_side.shtml  psrchive_ssi.in  psrchive_top.shtml  psrchive_version  qa_backup.csh  release.csh.in
More/: Makefile.am
More/Applications/: Makefile.am  PavApp.C  PavApp.h  calavg.C  diffdelay.C  drifting_subpulses.C  dynamic_spectra.C  example.C  fix_single.C  fluxcal.C  lmfit.C  mtm.C  paas.C  pac.C  pacv.C  pafit.C  pam.C  pas.C  pascii.C  pat.C  paz.C  pazi.C  pcm.C  pcmavg.C  pcmdiff.C  pcmerr.C  pcmrm.C  pdmp.C  pdv.C  print_Predictor.C  psr4th.C  psr4th2txt.C  psradd.C  psrchive.cfg  psrcull.C  psrdiff.C  psrflux.C  psrhelp  psrmodel.C  psrover.C  (+24 more)
More/General/: #ArchiveSort.C#  Accumulate.C  AdaptiveSNR.C  AdaptiveSmooth.C  AddNoise.C  Append.C  ArchiveComparisons.C  ArchiveMatch.C  ArchiveSort.C  ArchiveStatistic.C  ArchiveTemplates.C  Archive_append.C  Archive_apply_model.C  Archive_bscrunch.C  Archive_centre.C  Archive_centre_max_bin.C  Archive_convert_state.C  Archive_dedisperse.C  Archive_defaraday.C  Archive_fappend.C  Archive_find.C  Archive_fold.C  Archive_fscrunch.C  Archive_good_model.C  Archive_invint.C  Archive_match.C  Archive_pscrunch.C  Archive_remove_baseline.C  Archive_rms_baseline.C  Archive_rotate.C  Archive_set_ephemeris.C  Archive_set_model.C  Archive_toas.C  Archive_total.C  Archive_transform.C  Archive_tscrunch.C  Archive_tscrunched.C  Archive_update_model.C  Archive_weighted_frequency.C  BaselineEstimator.C  (+168 more)
More/MEAL/: Argument.C  ArgumentPolicy.C  BinaryScalar.C  Boost.C  Boost1.C  BoostUnion.C  ChainRule.C  Coherency.C  Complex2.C  Complex2Constant.C  Complex2Math.C  Complex2Value.C  ComplexCorrelation.C  ComplexRVM.C  Composite.C  CongruenceTransformation.C  CrossCoherency.C  CyclicParameter.C  Depolarizer.C  ExampleComplex2.h  ForwardChanged.C  Function.C  Function_load.C  Function_new_Function.C  Function_parse.C  Function_print.C  Gain.C  Gaussian.C  GimbalLockMonitor.C  Invariant.C  JonesCloude.C  JonesMueller.C  JonesSpinor.C  LeastSquares.C  MEAL.tex  Makefile.am  ModeCoherency.C  MuellerTransformation.C  MultivariatePolicy.C  NormalizeStokes.C  (+86 more)
More/Plotting/: AnglePlot.C  AnglePlotTI.C  BandpassChannelWeightPlot.C  BandpassPlot.C  BandpassPlotTI.C  CalPhVFreqPlot.C  CalibratorInfo.C  CalibratorParameter.C  CalibratorPlotter.C  CalibratorSpectrum.C  CalibratorSpectrumTI.C  ChannelWeightsPlot.C  DigitiserCountsPlot.C  DigitiserCountsPlotTI.C  DigitiserStatsPlot.C  DigitiserStatsPlotTI.C  DynamicBaselineSpectrum.C  DynamicBaselineSpectrumPlot.C  DynamicBaselineSpectrumPlotTI.C  DynamicBaselineSpectrumTI.C  DynamicCalSpectrum.C  DynamicCalSpectrumPlot.C  DynamicCalSpectrumPlotTI.C  DynamicCalSpectrumTI.C  DynamicSNSpectrum.C  DynamicSNSpectrumPlot.C  DynamicSNSpectrumPlotTI.C  DynamicSNSpectrumTI.C  DynamicSpectrum.C  DynamicSpectrumPlot.C  DynamicSpectrumPlotTI.C  DynamicSpectrumTI.C  DynamicStatSpectrumPlot.C  DynamicStatSpectrumPlotTI.C  EllAngPlot.C  (+82 more)
Util/: Makefile.am
config/: Makefile.Qt  Makefile.am  Makefile.include  Makefile.local  Makefile.root  ac_pkg_swig.m4  ac_python_devel.m4  aclocal.sh  armadillo.m4  best_partial_specialization.m4  bnv_have_qt.m4  cfitsio.m4  cvshome  cxxf77.m4  debug.m4  default_partial_specialization.m4  download.m4  eigen.m4  epsic.m4  epsic.sh  etr_socket_nsl.m4  f77.m4  fftw.m4  find.m4  fmath.m4  giza.m4  healpix.m4  install-intermediate  ipp.m4  limits.m4  local_root  mkl.m4  mpi.m4  optimize.m4  package.m4  pgplot.m4  psrcat.m4  pthread.m4  qtdriv.m4  readline.m4  (+5 more)
(+1628 files in other folders)
