
aclocaldir = $(datadir)/aclocal

dist_aclocal_DATA = \
	debug.m4 local.m4 compiler.m4 x11.m4 pgplot.m4 getopt_long.m4 mpi.m4 \
	Makefile.root Makefile.local Makefile.include install-intermediate

nodist_aclocal_DATA = Makefile.aclocal

EXTRA_DIST = aclocal.sh
CLEANFILES = Makefile.aclocal

#############################################################################
#
# This Makefile smooths over various bugs and bumps and other features
# that break the other GNU autotools-generated Makefiles
#

all-local: 11-08-2007 03-09-2007 11-09-2007 17-04-2009

libs:

#############################################################################
#
# Rule to generate Makefile.aclocal
#

Makefile.aclocal: $(srcdir)/aclocal.sh
	$(SHELL) $(srcdir)/aclocal.sh $(dist_aclocal_DATA) > Makefile.aclocal

#############################################################################
#
# 11 August 2007 - straten
#
# In the top build directory, the intermediate header file directory
# was renamed from include/ to local_include/ in order to avoid conflicts
# when $top_builddir == $prefix
#
# This target removes the old $top_builddir/include directory.
#
11-08-2007:
	@if test -d $(top_includedir) -a $(top_builddir) != $(prefix); \
	  then echo Removing old intermediate header file directory; \
	  rm -rf $(top_includedir); \
	fi

top_includedir := $(top_builddir)/include

#############################################################################
#
# 3 September 2007 - straten
#
# After adding Management/psrchive_info.C make fails with
# ".deps/psrchive_info.Po: No such file or directory"
#
03-09-2007:
	@if test ! -f $(top_builddir)/Management/.deps/psrchive_info.Po; then \
	  cd $(top_builddir) && \
          /bin/sh ./config.status Management/Makefile depfiles; \
	fi

#############################################################################
#
# 11 September 2007 - straten
#
# Util/genutil/ThreadContext.h used to be generated by the configure script
# from Util/genutil/ThreadContext.h.in
#
# This has been changed so that the header file is now checked into CVS.
# However, cvs will complain with
#
# cvs update: move away `Util/genutil/ThreadContext.h'; it is in the way
# C Util/genutil/ThreadContext.h
#
# This target fixes up this problem by removing the old file and checking 
# out the new; it also removes ThreadContext.h from the the build directory
# if top_builddir != top_srcdir
#
11-09-2007:
	@if test -f $(file_11092007); then \
	have=`$(FGREP) ThreadContext.h $(file_11092007)`; \
	if test -z "$$have"; then \
	  cd $(top_srcdir)/Util/genutil && \
	  rm -f ThreadContext.h && cvs update ThreadContext.h; \
	fi; fi
	@if test $(top_builddir) != $(top_srcdir); then \
	  rm -f $(top_builddir)/Util/genutil/ThreadContext.h; \
	fi

file_11092007 := $(top_srcdir)/Util/genutil/CVS/Entries


#############################################################################
#
# 11 September 2007 - straten
#
# The packages/ sub-directory contains scripts that can be used to help
# install third-party packages.  By making it independently configurable,
# it can be used before psrchive is configured and compiled.
#
# This turns out to be a bit of a headache, as the automake-generated
# rules that re-run the configure script do not perform the required
# nested configure.  (running ./configure does the required recursion.)
#
# This rule looks out for this problem and runs the nested configure,
# producing the Makefile required for "make dist" to work.

17-04-2009:
	@if test ! -f $(top_builddir)/packages/Makefile; then \
	  cd $(top_builddir)/packages && $(top_srcdir)/packages/configure; \
	fi

