
noinst_LTLIBRARIES = libChecks.la

nobase_include_HEADERS = \
        Pulsar/CalSource.h

libChecks_la_SOURCES = Check_registry.C \
	CalSource.C

#############################################################################
#
# Dependencies should never be changed
#

include $(top_srcdir)/config/Makefile.include

