
noinst_LTLIBRARIES = libChecks.la

nobase_include_HEADERS = \
        Pulsar/CalSource.h \
	Pulsar/Dedispersed.h \
	Pulsar/DeFaradayed.h

libChecks_la_SOURCES = Check_registry.C \
	CalSource.C \
	Dedispersed.C \
	DeFaradayed.C

#############################################################################
#
# Dependencies should never be changed
#

include $(top_srcdir)/config/Makefile.include

